# htslib

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  bgzf.c  config.h  config.h.in  configure.ac  faidx.c  hfile.c  hts.c  htslib.mk  sam.c  tabix.c  vcf.c
cram/: cram_codecs.c  cram_decode.c  cram_encode.c  cram_index.c  cram_io.c  cram_stats.c  files.c  mFILE.c  pooled_alloc.c  sam_header.c  vlen.c  zfio.c
lib/: .gitignore  Makefile.am
m4/: gnulib-cache.m4  gnulib-comp.m4
test/: Makefile  Makefile.am  Makefile.in
